@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-06T08:13:47Z",
-  "count_outdated" : 191,
-  "uniques_outdated" : 164,
+  "timestamp" : "2023-10-07T00:48:11Z",
+  "count_outdated" : 192,
+  "uniques_outdated" : 165,
   "count" : 203,
   "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2023-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-25T00:00:00Z",
       "count": 1,
